--- a/myproject/src/app/admin/addpackage/addpackage.component.html
+++ b/myproject/src/app/admin/addpackage/addpackage.component.html
@@ -26,7 +26,12 @@
     <tr>
     <td><h4>Price</h4></td>
     <td><input type="text" class="form-control" id="price" maxlength="30" [(ngModel)]="packages.package_price" name="packageprice"></td>
-    </tr>  
+    </tr> 
+    
+    <tr>
+        <td><h4>Image Link</h4></td>
+        <td><input type="text" class="form-control" id="pictures" maxlength="30" [(ngModel)]="packages.pictures" name="pictures"></td>
+    </tr> 
     
     <tr>
     <td colspan=2 align="center">
