--- a/myproject/src/app/admin/viewpackage/viewpackage.component.html
+++ b/myproject/src/app/admin/viewpackage/viewpackage.component.html
@@ -3,9 +3,9 @@
   href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
   rel="stylesheet"  type='text/css'>
   </head>
-<h1><strong>Packages</strong></h1>
 <table class="table">
     <thead>
+        <tr><td colspan="7" align-text='center'><h2><strong>Packages</strong></h2></td></tr>
         <tr>
         <th>Package Id</th>
         <th>Package Name</th>
