--- a/myproject/src/app/app.component.html
+++ b/myproject/src/app/app.component.html
@@ -26,7 +26,7 @@
                     <a id="book" class="nav-link btn btn-secondary btn-sm" href="#out"><strong><i class="fa fa-plane"></i>  Book Now</strong></a>
                 </li>
                 <li class="nav-item">
-                  <a id="login" class="nav-link btn btn-secondary btn-sm" href="formlogin/"><strong>Login</strong></a>
+                  <a id="login" class="nav-link btn btn-secondary btn-sm" href="formlogin"><strong>Login</strong></a>
               </li>
             </ul>
         </div>
