--- a/myproject/src/app/admin/addguide/addguide.component.html
+++ b/myproject/src/app/admin/addguide/addguide.component.html
@@ -1,7 +1,7 @@
 <div class="box">
 <div class="front-box">
     
-<form (ngSubmit) = "onSubmit()">
+<form (ngSubmit) = "onSubmit()" onsubmit="window.location.reload()">
     <table align="center">
     <tr><th colspan=2><h2 align="center"><strong>Add Guide</strong></h2></th></tr>
     <tr>
@@ -27,6 +27,21 @@
     <tr>
     <td><h4>Experience</h4></td>
     <td><input type="text" class="form-control" id="experience" maxlength="30" [(ngModel)]="guides.experience" name="experience"></td>
+    </tr>
+
+    <tr>
+        <td><h4>Designation</h4></td>
+        <td><input type="text" class="form-control" id="desig" maxlength="30" [(ngModel)]="guides.desig" name="desig"></td>
+    </tr>
+        
+    <tr>
+        <td><h4>Languages Known</h4></td>
+        <td><input type="text" class="form-control" id="lang_known" maxlength="30" [(ngModel)]="guides.lang_known" name="lang_known"></td>
+    </tr>
+    
+    <tr>
+        <td><h4>Description</h4></td>
+        <td><input type="text" class="form-control" id="descr" maxlength="30" [(ngModel)]="guides.descr" name="descr"></td>
     </tr>
     
     <tr>
