--- a/myproject/src/app/admin/viewguide/viewguide.component.html
+++ b/myproject/src/app/admin/viewguide/viewguide.component.html
@@ -3,9 +3,9 @@
   href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
   rel="stylesheet"  type='text/css'>
   </head>
-<h1><strong>Guides</strong></h1>
 <table class="table">
     <thead>
+        <tr><td colspan="9" align-text='center'><h2><strong>Guide Details</strong></h2></td></tr>
         <tr>
         <th>Guide Id</th>
         <th>Guide Name</th>
