--- a/myproject/src/app/admin/viewpackage/viewpackage.component.css
+++ b/myproject/src/app/admin/viewpackage/viewpackage.component.css
@@ -1,4 +1,4 @@
-th{
+th,td{
     text-align:center;
 }
 *{
@@ -12,9 +12,9 @@ table,td,th{
 
 table{
     width:1000px;
-    background: rgba(0,0,0,.7);
+    background: rgba(0,0,0,.8);
     position:absolute;
-    top:150px;
+    top:75px;
     left:300px;
     border-radius: 15px;
 }
