--- a/myproject/src/app/gallery/gallery.component.html
+++ b/myproject/src/app/gallery/gallery.component.html
@@ -1,2 +1,18 @@
-<div class="bg-img"></div>
+<div class="homebody">
+<div id="content">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+      <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let image of images">
+        <div class="rowpadding">    
+            <div id="products_card">
+                <div class="card-body">
+        <mat-card class="mat-elevation-z4">
+          <mat-card-content>
+            <img mat-card-image src="{{image.img_link}}">
+          </mat-card-content>
+        </mat-card>
+        </div></div></div>
+      </div>
+    </div>
+  </div>
+  </div>
 <router-outlet></router-outlet>
