--- a/myproject/src/app/guideform/guideform.component.css
+++ b/myproject/src/app/guideform/guideform.component.css
@@ -3,12 +3,12 @@
 }
 .front-box {
     position: absolute;
-    top: 50%;
+    top: 63%;
     left: 50%;
     width: 700px;
     padding: 10px;
     transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
+    background: rgba(0,0,0,.7);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
@@ -19,7 +19,7 @@
 }
 
 input {
-  width: 300px;
+  width: 350px;
   padding: 6px 10px;
   margin: 5px 0;
   box-sizing: border-box;
@@ -38,4 +38,19 @@ th{
 h2{
     text-align: center;
 }
+
+option , optgroup{
+    background-color:#36454F;
+    color:white;
+    width: 600px;
+    font-size:16px;
+}
+select{
+  width: 350px;
+  padding: 6px 6px;
+  margin: 3px 0;
+  box-sizing: border-box;
+  color:black;
+  font-size: 16px;
+}   
 
