--- a/myproject/src/app/loginform/loginform.component.html
+++ b/myproject/src/app/loginform/loginform.component.html
@@ -2,10 +2,10 @@
 <div id="loginButton">
     <ul class="navbar-nav ms-auto">
         <li>
-            <a id="customer" class="button-3" href="#out"><strong>Traveller</strong></a><br/><br/>
+            <a id="customer" class="button-3" href="formlogin"><strong>Traveller</strong></a><br/><br/>
         </li>
         <li>
-          <a id="admin" class="button-3" href="admin"><strong>Admin</strong></a><br/><br/>
+          <a id="admin" class="button-3" href="formlogin"><strong>Admin</strong></a><br/><br/>
       </li>
       <li>
         <a id="guide" class="button-3" href="#out"><strong>Guide</strong></a>
