--- a/myproject/src/app/package/package.component.css
+++ b/myproject/src/app/package/package.component.css
@@ -30,7 +30,7 @@ td,th{
 }
 #products_card{
     border-radius: 25px;
-    background: rgba(0,0,0,.7);
+    background: rgba(0,0,0,.8);
     color:white;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
@@ -61,6 +61,13 @@ td,th{
 
 .cardhead{
     height:70px;
+}
+
+img{
+    height:200px;
+    width:285px;
+    border-radius:10px;
+    border-color:white;
 }
 
 
