--- a/myproject/src/app/package/package.component.html
+++ b/myproject/src/app/package/package.component.html
@@ -1,6 +1,4 @@
 
-
-
 <h1 id="heading"><strong>Package Details</strong></h1>
   <div class="content">
     <div fxLayout="row wrap" fxLayoutGap="16px grid">
@@ -12,7 +10,7 @@
           <mat-card-header>
             <mat-card-title class="cardhead"><h3>{{pack.package_name}}</h3></mat-card-title>
           </mat-card-header>
-          <img mat-card-image src="/assets/images/Finland.jpg">
+          <img mat-card-image src="{{pack.pictures}}">
           <mat-card-content>
                 <table class="table">
                     <tr><th>Package Id</th><td>{{pack.p_id}}</td></tr>
