--- a/myproject/src/app/team/team.component.css
+++ b/myproject/src/app/team/team.component.css
@@ -1,4 +1,82 @@
-#guides{
-    position:absolute;
-    top:px;
+h3{
+    text-align: center;
 }
+
+.table{
+    row-gap:5rem;
+    
+}
+td,th{
+    padding-bottom:10px;
+    text-align:center;
+}
+
+.card-body{
+    padding-left:.5rem;
+    padding-right:.5rem;  
+    margin:.5rem;
+    height:280px;
+    width:420px;
+          
+}
+.rowpadding{
+    height:300px;
+    width:425px;
+}
+#products_card{
+    border-radius: 25px;
+    background: rgba(0,0,0,.8);
+    color:white;
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    cursor: pointer;
+}
+
+#products_card:hover{
+     transform: scale(1.05);
+     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+#heading{
+    text-align: center;
+    position:absolute;
+    top:70px;
+    left:580px;
+}
+
+#headdes{
+    text-align: center;
+    position:absolute;
+    top:130px;
+    left:370px;
+}
+
+*{
+    color:white;
+}
+
+.content{
+    margin:.5rem;
+    position:absolute;
+    top: 180px;
+}
+
+.c0{
+    color:skyblue;
+    font-size:32px;
+    font-weight: bold;
+}
+.c1{
+    font-size:14px;
+}
+.c2{
+    font-size:18px;
+}
+.c3{
+    font-size:16px;
+}
+.lang{
+    color:palevioletred;
+    text-align: left;
+}
+    
