--- a/myproject/src/app/team/team.component.html
+++ b/myproject/src/app/team/team.component.html
@@ -1,42 +1,24 @@
- <!--Team-->
- <div id="guides" class="offset">
-    <div class="col-12 text-center">
-        <h2 class="heading">Our Guides</h2>
-        <h3 class="des">We have the Best Guides to make your tour awesome.</h3>
-        <hr class="socket">
+<!--Team-->
+<h1 id="heading"><strong>Our Guides</strong></h1>
+<h3 id="headdes">We have the Best Guides to make your tour awesome.</h3>
+  <div class="content">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+      <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let guide of guides">
+        <div class="rowpadding">    
+            <div id="products_card">
+                <div class="card-body">
+        <mat-card class="mat-elevation-z4">
+            <table>
+          <mat-card-content>
+                <tr><td colspan="2"><div class="c0">{{guide.g_name}}</div></td></tr>
+                <tr class="c1"><td colspan="2">{{guide.desig}}, {{guide.experience}} of Experience</td></tr>
+                <tr class="c2"><td colspan="2">{{guide.descr}}</td></tr>
+                <tr class="c3"><td>Languages known :</td><td><div class="lang">{{guide.lang_known}}</div></td></tr>    
+          </mat-card-content>
+        </table>
+        </mat-card>
+        </div></div></div>
+      </div>
     </div>
-    <div class="row padding">
-        <div class="col-md-4">
-            <div id="service1" class="card h-100 text-center">
-                
-                <div class="card-body">
-                    <h3 class="name">Annie Carley</h3>
-                    <h6>Tour Operator, 6 years of experience</h6><br>
-                    <h5>Annie is an expert tour guide. She knows all the gems and the best sights to discover in France.</h5>
-                    <h6 class="Lang">Languages: English, French, German</h6>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div id="service1" class="card h-100 text-center">
-                <div class="card-body">
-                    <h3 class="name">Rouger Paul</h3>
-                    <h6>Senior Tour Agent, 10 years of experience</h6><br>
-                    <h5>Paul is our licensed senior tour agent with more than 10 years of travel industry experience under his belt.</h5>
-                    <h6 class="Lang">Languages: English, French, Italian</h6>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div id="service1" class="card h-100 text-center">
-                <div class="card-body">
-                    <h3 class="name">Jane Buckland</h3>
-                    <h6>Tour Guide, 4 years of experience</h6><br>
-                    <h5>Jane joined our team as a travel guide. She is always very friendly to clients to help them get a memorable travel experience.</h5>
-                    <h6 class="Lang">Languages: English, French, Italian</h6>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+  </div>
 <router-outlet></router-outlet>
